wrapped tiles in containers to fix ios margin right bug

--- a/src/css/projectsMobile.css
+++ b/src/css/projectsMobile.css
@@ -37,41 +37,49 @@
     flex-direction: column;
     font-size: 70%;
     overflow: auto;
-    background-color: rgb(63, 63, 63);
+    background-color: rgba(27, 27, 27, 0.164);
     border-radius: 15px;
     height: 50%;
     min-width: 60%;
-    transition: all 0.4s ease-out;
+    transition: all 0.15s ease;
+    filter: blur(1px);
 }
 
 .mobile-project-showcase.project-snapped { /* ADDED: Style for snapped tile */
     transform: scale(1.5); /* Scale up the snapped tile */
     height: 63%;
+    filter: blur(0px);
+    background-color: rgb(37, 37, 37);
 }
 
 
 #lower-div-main{
-    overflow: auto;
+    overflow-x: auto;
+    overflow-y: hidden;
     height: 20%;
-
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    gap: 80px;
-
     scroll-snap-type: x mandatory; /* ADD THIS: Enable horizontal scroll snap - mandatory snap */
     scroll-snap-stop: always; /* ADD THIS: Ensure snapping occurs every time */
     -webkit-overflow-scrolling: touch; /* ADD THIS: Enable smooth scrolling on iOS */
-    scroll-padding-inline: 10%;
+    scroll-padding-inline: 0%;
 }
 
-#lower-div-main>#tile01{
-    margin-left: 25%;
+
+.tile-mobile-container{
+    flex: 1;
+    min-width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 100%;
+    overflow: auto;
+    height: 100%;
+    scroll-snap-align: center;
 }
 
-#lower-div-main>#tile05{
-    margin-right: 25%;
-}
 
 .tile-mobile{
     overflow: hidden;
@@ -79,13 +87,15 @@
     align-items: center;
     justify-content: center;
     font-size: 100%;
-    overflow: auto;
     min-width: 50%;
     height: 40%;
     border-radius: 15px;
-    scroll-snap-align: center;
     transition: transform 0.1s ease-out;
     background-color: rgb(75, 75, 75);
+}
+
+.tile-mobile>a>svg{
+    display: none;
 }
 
 .tile-mobile>a{
@@ -95,11 +105,15 @@
     justify-content: center;
     gap: 5px;
 }
-.tile-mobile.tile-snapped>a>i{
+.tile-snapped>.tile-mobile>a>i{
     opacity: 0%;
 }
 
-.tile-mobile.tile-snapped { /* ADDED: Style for snapped tile */
+.tile-snapped>.tile-mobile>a>svg{
+    display: block;
+}
+
+.tile-snapped>.tile-mobile { /* ADDED: Style for snapped tile */
     overflow: hidden;
     transform: scale(1.5); /* Scale up the snapped tile */
 }
